Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104105

Bluez LE advertiser dispose crash when bluetooth off

XMLWordPrintable

    • Linux/X11
    • 5
    • f1ff9f4d17 (qt/qtconnectivity/dev) d1048641be (qt/qtconnectivity/6.4) d1048641be (qt/tqtc-qtconnectivity/6.4) f1ff9f4d17 (qt/tqtc-qtconnectivity/dev) 3b704d5b97 (qt/tqtc-qtconnectivity/6.2) ba7f545a89 (qt/qtconnectivity/6.3)
    • Team A Foundation Sprint 59

      Steps to reproduce (reproduced with the bttestui manual test application):

      0) Have bluetooth off
      1) instantiate QLowEnergyController peripheral
      2) start advertising (an advertising error occurs as expected because Bluetooth is off)
      3) delete/dispose the peripheral controller => crash

        For Gerrit Dashboard: QTBUG-104105
        # Subject Branch Project Status CR V

            vuokko Juha Vuolle
            vuokko Juha Vuolle
            Vladimir Minenko Vladimir Minenko
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes