Fix Bluez LE advertiser delete crash

Bluez LE advertiser and Bluez LE controller use/share an instance of
HCI manager, and in some circumstances the deletion of the LE controller
leads to a crash. This is because:
1) LE advertiser and HCI manager are parented to the LE controller
2) LE advertiser uses HCI manager in its destructor
=> When LE controller is deleted, its QObject children are deleted.
   If the HCI manager happens to be deleted first, the advertiser uses
   a by-now deleted HCI manager in its destructor

This commit makes the HCI manager a shared resource so that the exact
destruction order does not matter.

As a drive-by set deleted cmacCalculator pointer to nullptr.

Fixes: QTBUG-104105
Change-Id: I1c5e319af2fc59c4d5bb1fed33b8824eb3c4cb29
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
(cherry picked from commit f1ff9f4d17b82b5e597e28118de62beab705519e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>