src/bluetooth/bluez/hcimanager_p.h
@@ -192,7 +192,7 @@ public:
     };
     Q_ENUM(HciError);
 
-    explicit HciManager(const QBluetoothAddress &deviceAdapter, QObject *parent = nullptr);
+    explicit HciManager(const QBluetoothAddress &deviceAdapter);
     ~HciManager();
 
     bool isValid() const;
